<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.swty_wy.myapplication.MainActivity">

    <TextView
        android:id="@+id/inputName"
        android:layout_width="80px"
        android:layout_height="wrap_content"
        android:textSize="20px"
        android:text="Hello World!" />

    <TextView
        android:id="@+id/inputAge"
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:textSize="20px"
        android:text="Hello World!" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_button"
        android:id="@+id/button03"
        android:layout_below="@+id/inputName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_handler_button"
        android:id="@+id/button_handler"
        android:layout_below="@+id/button03"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_music_button"
        android:id="@+id/button_music"
        android:layout_below="@+id/button_handler"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_web_view_button"
        android:id="@+id/button_web_view"
        android:layout_below="@+id/button_music"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_broadcast_button"
        android:id="@+id/button_broadcast"
        android:layout_below="@+id/button_web_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_list_view_button"
        android:id="@+id/button_list_view"
        android:layout_below="@+id/button_broadcast"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_widget_button"
        android:id="@+id/button_widget"
        android:layout_below="@+id/button_list_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.ListViewCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button03">

    </android.support.v7.widget.ListViewCompat>
</RelativeLayout>
