<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_textview_weather"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_get_weather_button"
        android:id="@+id/button_weather_get"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="result"
        android:id="@+id/edit_text_result"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_parse_weather_button"
        android:id="@+id/button_weather_parse"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="当天天气："
            android:id="@+id/text_view_forecast_today"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="明天天气："
            android:id="@+id/text_view_forecast_next1day"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="后天天气："
            android:id="@+id/text_view_forecast_next2day"/>

    </LinearLayout>

</LinearLayout>